# design-patterns

./: README.md
producer-consumer/c/: CMakeLists.txt  main.c  queue.c  queue.h
